# autogodpack

./: .gitignore  LICENSE  QUICKSTART.md  README.md  README_BUILD.md  bot_devices.json  build_exe.py  config.yaml  pyproject.toml  reorganize_templates.py  requirements.txt  run_gui.py  test_gui.py
.claude/: settings.local.json
autogodpack/: __init__.py  __main__.py
autogodpack/adb/: __init__.py  client.py  commands.py  device_manager.py
autogodpack/config/: __init__.py  loader.py  settings.py
autogodpack/core/: __init__.py  bot.py  multi_bot_manager.py  state_machine.py  stop_checker.py
autogodpack/gui/: __init__.py  __main__.py  app.py  debug_window.py  error_handler.py
autogodpack/image/: __init__.py  matcher.py  screenshot.py
autogodpack/screens/: __init__.py  base.py
autogodpack/state/: __init__.py  models.py  persistence.py
autogodpack/utils/: __init__.py  exceptions.py  logging.py
scripts/: capture_screen.py  reset_expansions.py
src/: battle_bot.py  capture_screen.py
tests/: __init__.py
